"[TDJ] pdf generations   "  "